--- a/colorchicker.html
+++ b/colorchicker.html
@@ -15,7 +15,7 @@ h1 {
 </style>
 </head>
 <body>
-<table border="1" width="600px"height="600px">
+<table width="400px"height="400px">
 <caption><h1>COLOUR CHEACKER</h1></caption>
 <tr>
 <td bgcolor="#ff4012"></td>
